add data file and updated notebook

--- a/clean-relampago-data.ipynb
+++ b/clean-relampago-data.ipynb
@@ -69,13 +69,21 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "a27c5019-0c61-47bf-8a92-6d372a0d68b6",
+   "metadata": {},
+   "source": [
+    "I included a sample radar file from the RELAMPAGO field campaign here, an X-Band mobile radar"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 787,
+   "execution_count": 826,
    "id": "9d3703c8-3647-4fca-8b53-886c8bb838f6",
    "metadata": {},
    "outputs": [],
    "source": [
-    "radar = pyart.io.read(files[7])"
+    "radar = pyart.io.read('data/cfrad.20181110_200308_DOW6low_v267_s02_el0.96_SUR.nc')"
    ]
   },
   {
